# teams-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/superpowers/plans/: 2026-03-25-teams-mcp-server.md
src/teams_mcp/: auth.py  graph.py  server.py
tests/: test_auth.py  test_graph.py  test_server.py
