[project]
name = "teams-mcp-server"
version = "0.1.0"
description = "MCP server for Microsoft Teams via Graph API"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "msal>=1.31.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
]

[project.scripts]
teams-mcp = "teams_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teams_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
